Fix Hiding Mixer elements for invisible sources

--- a/app/app.g.less
+++ b/app/app.g.less
@@ -400,6 +400,11 @@ select {
   }
 }
 
+.icon-right {
+  display: block;
+  transform: rotate(-90deg) translate(-70%, -25%);
+}
+
 // Loader TODO: move off of Beaker
 .s-loader__bg {
   background: var(--background) !important;
